tests/snapshots/examples_fixtures/sealing__deny_filesystem.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/sealing/deny_filesystem.flx
== compile ==
failed (compile)
== diagnostics ==
error[E427]: Sealed Effect Violation

This expression was sealed to allow {Console}, but it performs {FileSystem}.

  examples/sealing/deny_filesystem.flx:2:5
  |
2 |     read_file("missing.txt") sealing { Console }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     -------------------------------------------- sealed expression exceeds its allowed effects

Hint:
  Remove the sealed call or include these effects in the sealing row: FileSystem.

Note:
  missing sealed effects: FileSystem
== stdout ==
<not executed>
